--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Livery Designs</title>
-    <link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
 
@@ -20,7 +20,7 @@
 }
 
 .hero-heading {
-    font-size: 5rem;
+    font-size: 6rem;
     font-weight: bold;
     letter-spacing: 2px;
     background: #f5f5f5;
@@ -30,20 +30,20 @@
 
 .cta-button {
     display: inline-block;
-    padding: 12px 25px;
+    padding: 17px 25px;
     margin: 8px;
     font-size: 1.1rem;
     text-decoration: none;
     color: white;
     background: linear-gradient(135deg, #a91717, #7d1010);
     border-radius: 50px;
-    box-shadow: 0 4px 10px rgba(255, 71, 71, 0.3);
+    box-shadow: 0 4px 10px rgba(255, 71, 71, 0.5);
     transition: all 0.3s;
 }
 
 .cta-button:hover {
     transform: scale(1.05);
-    box-shadow: 0 6px 15px rgba(255, 71, 71, 0.5);
+    box-shadow: 0 6px 15px rgba(255, 71, 71, 0.7);
 }
     </style>
 </head>
