--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Custom Liveries</title>
-    <link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 
@@ -19,11 +19,6 @@
       align-content: center;
       padding-top: 200px;
 }
-@media (max-width: 768px) {
-    .portfolio-grid {
-        grid-template-columns: 1fr 1fr;
-    }
-}
        </style>
 </head>
 <body>
@@ -34,10 +29,25 @@
                 <img src="imgs/logo.png" alt="Tapzi Logo" class="nav-logo">
             </a>
             <a href="index.html">Home</a>
+            <a href="portfolio.html" class="active">Portfolio</a>
             <a href="request.html">Request</a>
-            <a href="contact.html">Contact</a>
         </nav>
     </header>
+
+    <section id="about-me" class="about-me-section">
+        <div class="about-me-content">
+          <div class="about-me-logo">
+            <img src="imgs/logored.png" alt="My Logo">
+          </div>
+          <div class="about-me-text">
+            <h2>About Me</h2>
+            <p>Hey! I’m Tapzi — a passionate israeli livery creator for Microsoft Flight Simulator and X Plane. I specialize in realistic and high-quality repaints from all over the world, ranging from classic airline designs to fully custom ones for individuals and virtual airlines.</p>
+            <p>Whether it’s a full fleet pack or a creative custom livery, I aim to make each one unique and detailed. I’m also part of known teams like HUES by Horizon Simulations, LivToAir, and FSLTL.</p>
+            <p>Take a look at my latest liveries below and feel free to reach out for any requests or questions!</p>
+          </div>
+        </div>
+      </section>
+      
     <!-- Portfolio Page -->
 <section id="portfolio" class="portfolio-section">
     <h2 class="portfolio-heading">My Latest Work</h2>
