--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,18 @@
 
     <header>
         <nav>
-            <a href="index.html">
+            <div class="nav-container">
+              <a href="index.html">
                 <img src="imgs/logo.png" alt="Tapzi Logo" class="nav-logo">
-            </a>
-            <a href="index.html">Home</a>
-            <a href="portfolio.html" class="active">Portfolio</a>
-            <a href="request.html">Request</a>
-        </nav>
+              </a>
+              <div class="nav-toggle" id="nav-toggle">&#9776;</div>
+              <div class="nav-links" id="nav-links">
+                <a href="index.html">Home</a>
+                <a href="portfolio.html" class="active">Portfolio</a>
+                <a href="request.html">Request</a>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <section id="about-me" class="about-me-section">
@@ -258,6 +263,13 @@
       document.getElementById("popup-overlay").classList.remove("show");
     }
     
+  const toggleBtn = document.getElementById('nav-toggle');
+  const navLinks = document.getElementById('nav-links');
+
+  toggleBtn.addEventListener('click', () => {
+    navLinks.classList.toggle('show');
+  });
+
     </script>
 </body>
 </html>
