--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <title>Portfolio - Custom Liveries</title>
     <link href="https://fonts.googleapis.com/css2?family=Lexend" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 
     <style>
@@ -46,7 +47,7 @@
           </div>
           <div class="about-me-text">
             <h2>About Me</h2>
-            <p>Hey! I’m Tapzi — a passionate israeli livery creator for Microsoft Flight Simulator and X Plane. I specialize in realistic and high-quality repaints from all over the world, ranging from classic airline designs to fully custom ones for individuals and virtual airlines.</p>
+            <p>Hey! I’m Tapzi — a passionate israeli livery creator for flight simulators, with love for aviation. I specialize in realistic and high-quality repaints from all over the world, ranging from classic airline designs to fully custom ones for individuals and virtual airlines.</p>
             <p>Whether it’s a full fleet pack or a creative custom livery, I aim to make each one unique and detailed. I’m also part of known teams like HUES by Horizon Simulations, LivToAir, and FSLTL.</p>
             <p>Take a look at my latest liveries below and feel free to reach out for any requests or questions!</p>
           </div>
@@ -246,10 +247,13 @@
                 <a href="https://www.instagram.com/_tapzi_/" target="_blank" class="social-icon instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
+                <a href="https://buymeacoffee.com/tapziliveries" target="_blank" class="social-icon donation">
+                    <i class="fa-brands fa-paypal"></i>
+                </a>
                  <!-- Buy Me A Coffee Link -->
-                 <a href="https://buymeacoffee.com/tapziliveries" target="_blank" class="social-icon donation">
-                  <i class="fa-solid fa-hand-holding-dollar"></i>
-              </a>
+                <a href="https://buymeacoffee.com/tapziliveries" target="_blank" class="social-icon donation">
+                    <i class="fa fa-buymeacoffee" aria-hidden="true"></i>
+                </a>
             </div>
         </div>
     </div>
