--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,8 @@
               <div class="nav-links" id="nav-links">
                 <a href="index.html">Home</a>
                 <a href="portfolio.html" class="active">Portfolio</a>
-                <a href="request.html">Request</a>
+                <a href="request.html">Livery Request</a>
+                <a href="custom.html">Custom Liveries</a>
               </div>
             </div>
           </nav>
@@ -48,8 +49,8 @@
           <div class="about-me-text">
             <h2>About Me</h2>
             <p>Hey! I’m Tapzi — a passionate israeli livery creator for flight simulators, with love for aviation. I specialize in realistic and high-quality repaints from all over the world, ranging from classic airline designs to fully custom ones for individuals and virtual airlines.</p>
-            <p>Whether it’s a full fleet pack or a creative custom livery, I aim to make each one unique and detailed. I’m also part of known teams like HUES by Horizon Simulations, LivToAir, and FSLTL.</p>
-            <p>Take a look at my latest liveries below and feel free to reach out for any requests or questions!</p>
+            <p>Whether it’s a full fleet pack or a custom livery, I aim to make each one unique and detailed. I’m also part of known teams like HUES by Horizon Simulations, LivToAir, and FSLTL.</p>
+            <p>Take a look at my liveries below and feel free to reach out for any requests or questions!</p>
           </div>
         </div>
       </section>
@@ -83,7 +84,7 @@
         <!-- Portfolio Item 3 -->
         <div class="portfolio-item">
             <div class="portfolio-image">
-                <img src="imgs/OSPREYASB10.png" alt="iniBuilds Airbus A350 Korean Air Pack">
+                <img src="imgs/Czech.png" alt="iniBuilds Airbus A350 Korean Air Pack">
             </div>
             <div class="portfolio-details">
                 <h3 class="portfolio-name">iniBuilds Airbus A350 Korean Air Pack</h3>
@@ -131,7 +132,7 @@
         <!-- Featured Livery Item 3 -->
         <div class="portfolio-item">
             <div class="portfolio-image">
-                <img src="imgs/OSPREYASB10.png" alt="TAP Air Portugal A319 Fleet">
+                <img src="imgs/Czech.png" alt="TAP Air Portugal A319 Fleet">
             </div>
             <div class="portfolio-details">
                 <h3 class="portfolio-name">Fenix A319 TAP Air Portugal Fleet</h3>
@@ -142,7 +143,7 @@
         <!-- Featured Livery Item 4 -->
         <div class="portfolio-item">
             <div class="portfolio-image">
-                <img src="imgs/OSPREYASB10.png" alt="Horizon Sim Boeing B787-9 LATAM Airlines Brazil">
+                <img src="imgs/Czech.png" alt="Horizon Sim Boeing B787-9 LATAM Airlines Brazil">
             </div>
             <div class="portfolio-details">
                 <h3 class="portfolio-name">Horizon Sim Boeing B789 LATAM Brazil</h3>
@@ -228,7 +229,11 @@
         <div class="footer-left">
             <p>&copy; 2025 Tapzi Liveries</p>
         </div>
-  
+        
+        <div class="footer-bottom" style="text-align: center; margin-top: 10px; font-size: 0.85em; color: #ffffff; font-size: 1rem;">
+          <a href="/privacy-policy.html" target="_blank" style="color: #ffffff; text-decoration: none; font-size: 1rem;">Privacy Policy</a>
+      </div>
+      
         <div class="footer-center">
             <div class="contact-info">
                 <p><strong>Discord:</strong> tapzi</p>
@@ -258,6 +263,8 @@
         </div>
     </div>
   </footer>
+
+  
   <script>
     function togglePopup() {
       document.getElementById("popup-overlay").classList.add("show");
