--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
      body {
        background: url('imgs/mainbg.png') center/cover no-repeat !important;
+       opacity: 1;
+       filter: none;
      }
 
 .hero-content {
